11712702-project2/test/test_11712702_7.out
Error type 13 at Line 16: non-structure variable
Error type 8 at Line 16: incompatiable return type
